[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://art/playerGrey_up2.png" type="Texture" id=2]
[ext_resource path="res://art/playerGrey_walk2.png" type="Texture" id=3]
[ext_resource path="res://art/playerGrey_walk1.png" type="Texture" id=4]
[ext_resource path="res://art/playerGrey_up1.png" type="Texture" id=5]
[ext_resource path="res://ships/ship_0.png" type="Texture" id=6]
[ext_resource path="res://particles/smokeyfire.png" type="Texture" id=7]
[ext_resource path="res://scenes/explode.tres" type="Material" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "ship",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.0

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 95.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
scale = 0.01
scale_random = 0.3

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )

[node name="col" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
shape = SubResource( 1 )

[node name="spr1" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="spr" type="AnimatedSprite" parent="."]
pause_mode = 1
visible = false
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "ship"

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
visible = false
shape = SubResource( 3 )

[node name="cam" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
offset_v = -1.0

[node name="atkTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="pos" type="Node2D" parent="."]
visible = false

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
lifetime = 0.05
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 7 )

[node name="cannon" type="Position2D" parent="."]
position = Vector2( 0, -35 )

[node name="explode" type="Particles2D" parent="."]
emitting = false
amount = 18
lifetime = 0.5
one_shot = true
explosiveness = 0.75
process_material = ExtResource( 8 )
texture = ExtResource( 7 )

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_collide"]
